# pylake

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  changelog.md  contributing.md  license.md  mutmut_config.py  pyproject.toml  readme.md  release.md  setup.cfg  setup.manifest  setup.py
.github/: CODEOWNERS
.github/actions/check-python-packaging/: action.yml
.github/workflows/: pylake.yml  pylake_coverage.yml  pylake_docs_test.yml  pylake_release.yml  pylake_test.py  pylake_test.yml  pylake_test_no_notebook.yml
Examples by Segments/: General Introduction.ipynb  fd_curves.ipynb  scans_and_kymos.ipynb
Examples by Segments/Cytoskeletal/: 20190215-142512 Marker force clamp.ipynb  force clamp, kinesin stepping on microtubules, closed loop.ipynb  kinesin stepping on microtubules, open loop.ipynb
Examples by Segments/DNA_RNA-Protein/: force_kymograph.ipynb
Examples by Segments/matlab/: timeslice.m
Opening H5DF Files/: Python - General Introduction.ipynb
Opening H5DF Files/matlab/: example.m  readme.md  to_matlab.m
docs/: api.rst  conf.py  index.rst  install.rst  readme.md  refs.bib  requirements.txt  run_notebooks.py  zrefs.rst
docs/_ext/: nbexport.py
docs/_static/: admonitions.css  api.css  custom.css  pylake_syntax_theme.py  root.css  sidebar.css
docs/_templates/: class.rst  function.rst  instance.rst
docs/examples/: index.rst
docs/examples/bead_coupling/: coupling.rst
docs/examples/binding_lifetime/: binding_lifetime.rst
docs/examples/cas9_kymotracking/: cas9_kymotracking.rst
docs/examples/cst/: index.rst  kinesin_closed_loop.rst  kinesin_open_loop.rst
docs/examples/dna_rna_protein/: force_kymograph.rst  index.rst
docs/examples/droplet_fusion/: droplet_fusion.rst
docs/examples/fd_fitting_advanced/: index.rst
docs/examples/fd_fitting_basic/: index.rst
docs/examples/fd_fitting_intermediate/: index.rst
docs/examples/hairpin_fitting/: hairpin_unfolding.rst
docs/examples/kon/: kon.rst
docs/examples/kymo_markers/: kymo_markers.rst
docs/examples/reca_fitting/: reca_fitting.rst
docs/examples/surface_calibration/: surface_calibration.rst
docs/examples/twlc_fitting/: twlc_fitting.rst
docs/examples_by_segments/: cytoskeletal_kinesin_bead_closed_loop.rst  cytoskeletal_kinesin_bead_open_loop.rst  cytoskleletal.rst  dna_rna-protein.rst  dna_rna-protein_force_kymograph.rst  index.rst  kinesin_bead_open_loop.rst
docs/load_files/: load_files.rst  python_load_files.rst
docs/theory/: index.rst
docs/theory/binding_duration/: first_order.rst  index.rst  intro.rst  rates.rst
docs/theory/diffusion/: diffusion.rst  index.rst  intro.rst
docs/theory/force_calibration/: active.rst  diode.rst  fitting.rst  force_calibration.rst  hyco.rst  index.rst  passive.rst  surface.rst
docs/tutorial/: correlatedstacks.rst  fdcurves.rst  fdfitting.rst  file.rst  force_calibration.rst  images.rst  imagestack.rst  index.rst  kymographs.rst  kymotracking.rst  nbwidgets.rst  piezotracking.rst  plotting_images.rst  population_dynamics.rst  scans.rst
docs/tutorial/force_calibration/: active_calibration.rst  calibration_items.rst  diode_model.rst  force_calibration.rst  index.rst  low_level_api.rst  robust_fitting.rst
docs/whatsnew/: index.rst
docs/whatsnew/1.0.0/: 1_0_0.rst
docs/whatsnew/1.1.0/: 1_1_0.rst
docs/whatsnew/1.2.0/: 1_2_0.rst
docs/whatsnew/1.3.0/: 1_3_0.rst
docs/whatsnew/1.4.0/: 1_4_0.rst
docs/whatsnew/1.5.0/: 1_5_0.rst
docs/whatsnew/1.6.0/: 1_6_0.rst
docs/whatsnew/1.7.0/: 1_7_0.rst
docs/whatsnew/1.8.0/: 1_8_0.rst
examples/: fd_curves.ipynb  introduction.ipynb  scans_and_kymos.ipynb
examples/Cytoskeletal/: segment 2 MT.ipynb
examples/applications/cytoskeletal/: force clamp, kinesin stepping on microtubules, closed loop.ipynb  kinesin stepping on microtubules, open loop.ipynb
examples/applications/dna_rna_protein/: force_kymograph.ipynb
lumicks/: __about__.py  __init__.py
lumicks/hdf5/: channel.py  fdcurve.py  file.py  group.py  kymo.py  point_scan.py  scan.py
lumicks/hdf5/detail/: image.py  mixin.py
lumicks/hdf5/tests/: conftest.py  test_channels.py  test_file.py  test_image.py  test_kymo.py  test_mixin.py  test_timeindex.py
lumicks/pylake/: __about__.py  __init__.py  adjustments.py  benchmark.py  calibration.py  calibration_item.py  channel.py  confocal.py  conftest.py  correlated_stack.py  fdcurve.py  fdensemble.py  fdfit.py  fdmodels.py  file.py  file_download.py  group.py  image_stack.py  kymo.py  lowlevel.py  marker.py  note.py  point_scan.py  profile_likelihood.py  recording.py  scalebar.py  scan.py
lumicks/pylake/detail/: alignment.py  bead_cropping.py  caching.py  calibrated_images.py  confocal.py  h5_helper.py  image.py  imaging_mixins.py  mixin.py  pixel_calibration.py  plotting.py  timeindex.py  units.py  utilities.py  value.py  widefield.py
lumicks/pylake/fitting/: datasets.py  fdmodels.py  fit.py  fitdata.py  fitobject.py  model.py  models.py  parameter_trace.py  parameters.py  profile_likelihood.py
lumicks/pylake/force_calibration/: calibration_item.py  calibration_models.py  calibration_results.py  convenience.py  power_spectrum.py  power_spectrum_calibration.py  powerspectrum_calibration.py  touchdown.py  validation.py
lumicks/pylake/kymotracker/: colocalization.py  kymoline.py  kymotrack.py  kymotracker.py  stitching.py
lumicks/pylake/low_level/: __init__.py  low_level.py
lumicks/pylake/nb_widgets/: correlated_plot.py  fd_selector.py  image_editing.py  kymotracker_widgets.py  range_selector.py
lumicks/pylake/piezo_tracking/: baseline.py  piezo_tracking.py
lumicks/pylake/population/: __init__.py  dwelltime.py  hmm.py  kinetics.py  mixture.py
lumicks/pylake/simulation/: __init__.py  diffusion.py
lumicks/pylake/tests/: conftest.py  test_arithmetic.py  test_calibrated_images.py  test_channels.py  test_correlated_stack.py  test_decorators.py  test_dfcurve.py  test_fdcurve.py  test_fdensemble.py  test_fdfit.py  test_file.py  test_file_download.py  test_image.py  test_imaging_mixins.py  (+11 more)
tests/: test_init.py
(+291 files in other folders)
