[metadata]
license_file = license.md

[tool:pytest]
minversion = 3.3
addopts = --doctest-modules --ignore=setup.py --ignore=docs/conf.py
norecursedirs = .* *.egg build cpp* dist docs/*
filterwarnings =
    # make warnings into errors but ignore certain third-party extension issues
    error
    # importing scipy submodules on some version of Python
    ignore::ImportWarning
    # bogus numpy ABI warning (see numpy/#432)
    ignore:.*numpy.dtype size changed.*:RuntimeWarning
    # h5py triggers numpy's FutureWarning
    ignore::FutureWarning
