[metadata]
license_file = license.md

[tool:pytest]
minversion = 3.3
addopts = --doctest-modules --ignore=setup.py --ignore=docs/conf.py
norecursedirs = .* *.egg build cpp* dist docs/*
filterwarnings =
    # make warnings into errors but ignore certain third-party extension issues
    error
    # importing scipy submodules on some version of Python
    ignore::ImportWarning
    # bogus numpy ABI warning (see numpy/#432)
    ignore:.*numpy.dtype size changed.*:RuntimeWarning
    ignore:.*numpy.ufunc size changed.*:RuntimeWarning
    # h5py triggers a numpy DeprecationWarning when accessing empty datasets (such as our json fields). Here they pass
    # a None shape argument where () is expected by numpy. This will likely be fixed in next h5py release, see the
    # following PR on h5py: https://github.com/h5py/h5py/pull/1780/files
    ignore:.*None into shape arguments as an alias for \(\) is.*:DeprecationWarning
