[metadata]
license_file = license.md

[tool:pytest]
minversion = 3.3
addopts = --doctest-modules --ignore=setup.py --ignore=docs/conf.py
norecursedirs = .* *.egg build cpp* dist docs/*
filterwarnings = error

[mutmut]
paths_to_mutate=lumicks/pylake/
backup=False
runner=python -m pytest
tests_dir=./
